# FlightSupervisor

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint  makefile  setup.ps1  setup.sh
atomic_models/: Command_Reposition.hpp  Hand.hpp  Handover_Control.hpp  Handover_Ctrl.hpp  LP_Manager.hpp  LP_Reposition.hpp  Landing_Routine.hpp  Man.hpp  Repo.hpp  Reposition_Timer.hpp  Stabilize.hpp  man.hpp  repo.hpp
coupled_model/: LP_Reposition.cpp  Supervisor.cpp  main.cpp
data_structures/: aircraft_state_message.hpp  enum_string_conversion.hpp  fcc_command.hpp  hover_criteria_message.cpp  hover_criteria_message.hpp  lp_message.hpp  message.cpp  message.hpp  plp_message.hpp
docs/: DEVS_Supervisor.drawio.xml  signal_definitions.xlsx
docs/diagrams/: DEVS_IO_Models.drawio.xml  DEVS_Supervisor.drawio.xml
docs/doxygen/: Doxyfile
include/: Constants.hpp  UDP_Callback.hpp  enum_string_conversion.hpp  input_models.hpp  input_readers.hpp  time_conversion.hpp
include/atomic_models/: Command_Reposition.hpp  Handle_Waypoint.hpp  Handover_Control.hpp  LP_Manager.hpp  Landing_Routine.hpp  Mission_Initialization.hpp  Reposition_Timer.hpp  Stabilize.hpp
include/coupled_models/: LP_Reposition.hpp  Landing.hpp  On_Route.hpp  Supervisor.hpp  Takeoff.hpp
include/io_models/: ASRA_Shared_Memory_Input.hpp  Aircraft_Gps_Time_Input.hpp  Aircraft_State_Input.hpp  Async_Test.hpp  Blocking_Input.hpp  Cache_Input.hpp  Callback_Tester.hpp  Command_Line_Input.hpp  GPS_Time.h  Landing_Achieved_Demand_Input.hpp  Landing_Command_Line_Input.hpp  Packet_Builder.hpp  Pilot_Takeover_Input.hpp  Polling_Condition_Input.hpp  RUDP_Output.hpp  Shared_Memory_Input.hpp  Shared_Memory_Output.hpp  Supervisor_Command_Line_Input.hpp  Supervisor_UDP_Input.hpp  UDP_Input.hpp  UDP_Input_Async.hpp  UDP_Output.hpp  User_Input.hpp
include/mavNRC/: ecl.h
include/message_structures/: message.hpp  message_aircraft_state_t.hpp  message_boss_mission_update_t.hpp  message_command_ack_t.hpp  message_fcc_command_t.hpp  message_fcc_command_waypoint_t.hpp  message_hover_criteria_t.hpp  message_landing_point_t.hpp  message_mavlink_mission_item_t.hpp  message_start_supervisor_t.hpp  message_update_gcs_t.hpp
input_data/: temp.txt
input_data/landing_routine/: pilot_takeover.txt
input_data/supervisor/: landing_achieved.txt
src/: CMakeLists.txt  Constants.hpp  component_macros.h  enum_string_conversion.hpp  input_models.hpp  input_readers.hpp  main.cpp  rt_supervisor.cpp  supervisor.cpp
src/atomic_models/: Command_Reposition.hpp  Handle_Waypoint.hpp  Handover_Control.hpp  LP_Manager.hpp  Landing_Routine.hpp  Mission_Initialization.hpp  Reposition_Timer.hpp  Stabilize.hpp
src/coupled_models/: LP_Reposition.cpp  LP_Reposition.hpp  Landing.hpp  On_Route.hpp  Supervisor.cpp  Supervisor.hpp  Takeoff.hpp  main.cpp
src/io_models/: ASRA_Shared_Memory_Input.hpp  Aircraft_State_Input.hpp  Blocking_Input.hpp  Cache_Input.hpp  GPS_Time.h  GPS_Time.hpp  Packet_Builder.hpp  Polling_Condition_Input.hpp  RUDP_Output.hpp  Shared_Memory_Input.hpp  Shared_Memory_Output.hpp  Supervisor_UDP_Input.hpp  UDP_Input.hpp  UDP_Input_Async.hpp  UDP_Output.hpp  UDP_Output_Macos10.hpp
src/mavNRC/: geo.cpp
src/message_structures/: message_aircraft_state_t.hpp  message_boss_mission_update_t.hpp  message_command_ack_t.hpp  message_fcc_command_t.hpp  message_hover_criteria_t.hpp  message_landing_point_t.hpp  message_start_supervisor_t.hpp
test/: README.md
test/drivers/: CMakeLists.txt  td_aircraft_gps_time_input.cpp  td_aircraft_state_input.cpp  td_asra_shared_memory_input.cpp  td_async_test.cpp  td_blocking_input.cpp  td_cache_input.cpp  td_command_line_input.cpp  td_command_reposition.cpp  td_handle_waypoint.cpp  td_handover_control.cpp  td_landing.cpp  td_landing_achieved_demand_input.cpp  td_landing_command_line.cpp  td_landing_routine.cpp  td_lp_manager.cpp  td_lp_reposition.cpp  td_mission_initialization.cpp  td_on_route.cpp  td_packet_builder.cpp  td_packet_builder_bool.cpp  td_packet_builder_boss.cpp  td_packet_builder_boss_temp.cpp  td_packet_builder_fcc.cpp  td_packet_builder_gcs.cpp  td_packet_builder_landing_point.cpp  td_packet_builder_landing_point_temp.cpp  td_pilot_takeover_input.cpp  td_polling_condition_input_landing.cpp  td_polling_condition_input_takeover.cpp  td_polling_condition_input_test.cpp  td_reposition_timer.cpp  td_rudp_output_mavnrc.cpp  td_shared_memory_input.cpp  td_shared_memory_output.cpp  td_stabilize.cpp  td_supervisor.cpp  td_supervisor_command_line.cpp  td_supervisor_udp_input.cpp  td_takeoff.cpp  (+9 more)
test/input_data/async_test/0/: delay.txt
test/input_data/blocking_input/0/: in.txt
test/input_data/cache_input/: README.md
test/input_data/cache_input/0/: get_input.txt  new_input.txt
test/input_data/cache_input/1/: get_input.txt  new_input.txt
test/input_data/cache_input/2/: get_input.txt  new_input.txt
test/input_data/cache_input/3/: new_input.txt
test/input_data/command_reposition/: README.md
test/input_data/handle_waypoint/: README.md
test/input_data/handover_control/: README.md
test/input_data/landing/: README.md
test/input_data/landing_command_line/: README.md
test/input_data/landing_routine/: README.md
test/input_data/lp_manager/: README.md
test/input_data/lp_reposition/: README.md
test/input_data/mission_initialization/: README.md
test/input_data/on_route/: README.md
test/input_data/packet_builder_fcc/: README.md
test/input_data/reposition_timer/: README.md
test/input_data/stabilize/: README.md
test/input_data/supervisor/: README.md
test/input_data/supervisor_command_line/: README.md  nominal_test.txt
test/input_data/supervisor_test_driver/: README.md
test/scripts/: output_file_parser.py  parser.py  simulation_cleanup.py
test/scripts/classes/: MessageParser.py  SortedTable.py  StateParser.py
test/src/: output_file_parser.py
test_drivers/: td_command_reposition.cpp  td_handover_control.cpp  td_landing_routine.cpp  td_lp_manager.cpp  td_lp_reposition.cpp  td_reposition_timer.cpp  td_stabilize.cpp  td_supervisor.cpp
(+188 files in other folders)
